<resources>
    <string name="app_name">Test Task 4 Alar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authenticate">Sign In</string>
    <string name="greetings">Welcome!</string>
    <string name="progress">Please wait…</string>
    <string name="error_wrong_credentials">Wrong Credentials!</string>
    <string name="page_label_auth">Authentication</string>
    <string name="error_field_required">Field required</string>
    <string name="error_unknown">Unknown error</string>
    <string name="page_label_locations">Locations</string>
    <string name="retry">Retry</string>
    <string name="label_id">Id</string>
    <string name="label_country">Country</string>
    <string name="label_name">Name</string>
    <string name="page_label_location_details">Location Details</string>
</resources>