<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.testtask0.ui.auth.AuthFragment"
        android:label="@string/page_label_auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_locationsFragment"
            app:destination="@id/locationsFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/locationsFragment"
        android:name="com.example.testtask0.ui.locations.LocationsFragment"
        android:label="@string/page_label_locations"
        tools:layout="@layout/fragment_locations">
        <action
            android:id="@+id/action_locationsFragment_to_locationFragment"
            app:destination="@id/locationFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.testtask0.ui.location.LocationDetailsFragment"
        android:label="@string/page_label_location_details"
        tools:layout="@layout/fragment_location_details">
        <argument
            android:name="location"
            app:argType="com.example.testtask0.ui.model.Location" />
    </fragment>
</navigation>